feat: creates the role precedence middleware
